--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "astar-typescript": "^1.2.5",
+    "firebase": "^9.1.3",
     "konva": "^8.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
